--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,7 @@
   border-radius: 0;
   box-shadow: none;
   border-color: #EEEEEE;
+  font-family: Inter;
 }
 
 .panel-default > .panel-heading {
@@ -18,6 +19,7 @@
 
 .panel-title {
   font-size: 14px;
+  font-family: Inter;
 }
 
 .panel-title > a {
